[package]
name = "typesxml"
version = "0.1.24"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { "version" = "4.2.6", features = ["derive"] }
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_rw = { version = "0.2.2", features = ["xml"] }