[package]
name = "typesxml"
version = "0.1.37"
edition = "2021"
description = "A types.xml library and XML files manipulation utility"
license = "MIT"
repository = "https://github.com/DZ-BAM/typesxml"
keywords = ["types.xml", "DayZ"]
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { "version" = "4.2.6", features = ["derive"] }
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_rw = { version = "0.4.0", features = ["xml"] }
